Cleanup - Fixes map settings tab alignment issue in Chrome

--- a/applications/impower/app/components/shading-settings/shading-settings.component.scss
+++ b/applications/impower/app/components/shading-settings/shading-settings.component.scss
@@ -32,7 +32,6 @@ body .ui-sidebar.transparent-back {
 }
 
 .sidebar-control {
-  margin-top: 5em;
   margin-left: 0.6em;
   a {
     padding: 0.1em 0.5em 0.3em;
